--- a/templates/index.html
+++ b/templates/index.html
@@ -59,15 +59,15 @@
     <section id="images" class="image-section">
         <div class="image-wrapper">
             <img src="/static/images/6649de9b-b6b3-45c9-953b-a216b2215eec-removebg-preview.png" width="200px" alt="Upload File">
-            <p>Upload your file for analysis!</p>
+            <p>Upload your encrypted text for analysis!</p>
         </div>
         <div class="image-wrapper">
             <img src="/static/images/577ebf2c-8a1d-46a5-9094-912588123cad-removebg-preview.png" width="200px" alt="Crack the Algorithm">
             <p>Detect and crack the algorithm!</p>
         </div>
         <div class="image-wrapper">
-            <img src="/static/images/a36b5709-1b6a-4b75-834c-5394a628a004-removebg-preview.png" width="200px" alt="Download Report">
-            <p>Download your detailed report!</p>
+            <img src="/static/images/chatbot-4736275_1280.png" width="150px" alt="Download Report">
+            <p>Chat with our bot!</p>
         </div>
     </section>
 
