--- a/templates/index.html
+++ b/templates/index.html
@@ -75,10 +75,11 @@
     <section id="about" class="about-section">
         <div class="about-content">
             <h2>About Our Tool</h2>
-            <p>CryptoCrack helps you analyze and detect encryption types in uploaded text files.
-                Whether it’s AES, RSA, MD5, or SHA, our tool provides instant results with precision.
+            <p>CryptoCrack helps you analyze and detect encryption types in uploaded text.
+                Whether it’s AES, RSA, Triple DES, or Serpent, our tool provides instant results with precision.
             </p>
-            <button class="read-more-btn">Read More</button>
+            <b style="color: #063c71;">To get to know more chat with our bot down there!</b>
+            
         </div>
         <div class="about-image">
             <img src="/static/images/laptop-8770486_1280.jpg" alt="About Image">
